# serializer version: 1
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'paused',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'paused',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'syncing',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'syncing',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'syncing',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'syncing',
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
